# zundux-tts

./: CLAUDE.md  Cargo.toml  README.md  install.sh  launch.sh  zundux_tts.desktop
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-16-new-features.md  2026-03-19-ux-overhaul.md
src/: app.rs  config.rs  main.rs  validation.rs
src/audio/: effects.rs  loudness.rs  mod.rs  playback.rs  virtual_device.rs
src/media/: desktop_capture.rs  mod.rs  url_player.rs
src/tts/: types.rs  voiceger.rs  voicevox.rs
src/ui/: input.rs  media.rs  mod.rs  settings.rs  soundboard.rs  theme.rs  titlebar.rs
tests/: theme_tests.rs  url_player_tests.rs  validation_tests.rs
