[package]
name = "zundux_tts"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rosc = "0.10"
anyhow = "1"
async-trait = "0.1"
directories = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.15"
url = "2"
shell-words = "1"
ctrlc = "3"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[patch.crates-io]
winit = { path = "patches/winit" }
